# docs/swagger.json
@@ -30,7 +30,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/genprotos.GetAllBookmarkedBusResponse"
+                            "$ref": "#/definitions/genprotos.GetAllBookmarkedBusinessResponse"
                         }
                     },
                     "400": {
@@ -65,7 +65,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/genprotos.CreateBookmarkedBusRequest"
+                            "$ref": "#/definitions/genprotos.CreateBookmarked"
                         }
                     }
                 ],
@@ -116,7 +116,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/genprotos.GetBookmarkedBusByIdResponse"
+                            "$ref": "#/definitions/genprotos.GetBookmarkedBusinessByIdResponse"
                         }
                     },
                     "400": {
@@ -176,7 +176,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Create Business",
+                "description": "Create a new business entry",
                 "consumes": [
                     "application/json"
                 ],
@@ -189,12 +189,12 @@
                 "summary": "Create Business",
                 "parameters": [
                     {
-                        "description": "Create",
+                        "description": "Create Business",
                         "name": "Create",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/genprotos.CreateBusinessRequest"
+                            "$ref": "#/definitions/genprotos.CreateBusiness"
                         }
                     }
                 ],
@@ -202,7 +202,7 @@
                     "201": {
                         "description": "Success",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/genprotos.CreateBusinessResponse"
                         }
                     },
                     "400": {
@@ -214,7 +214,7 @@
                 }
             }
         },
-        "/business-photos": {
+        "/business-photo": {
             "put": {
                 "security": [
                     {
@@ -239,7 +239,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/genprotos.UpdateBusinessPhotosRequest"
+                            "$ref": "#/definitions/genprotos.UpdatePhotos"
                         }
                     }
                 ],
@@ -282,7 +282,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/genprotos.CreateBusinessPhotosRequest"
+                            "$ref": "#/definitions/genprotos.CreatePhotos"
                         }
                     }
                 ],
@@ -302,41 +302,7 @@
                 }
             }
         },
-        "/business-photos/owner": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Get all photos uploaded by the current user (owner)",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Business Photos"
-                ],
-                "summary": "Get Business Photos by Owner",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/genprotos.GetBusinessPhotosByOwnerResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/business-photos/{businessId}": {
+        "/business-photo/{businessId}": {
             "get": {
                 "security": [
                     {
@@ -379,7 +345,7 @@
                 }
             }
         },
-        "/business-photos/{id}": {
+        "/business-photo/{id}": {
             "delete": {
                 "security": [
                     {
@@ -424,6 +390,11 @@
         },
         "/business/all": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get All Businesses",
                 "consumes": [
                     "application/json"
@@ -441,6 +412,42 @@
                         "default": 1,
                         "description": "Page number",
                         "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Business name",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "number",
+                        "description": "Average ratings",
+                        "name": "average_ratings",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Category",
+                        "name": "category",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Contact info",
+                        "name": "contact_info",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Hours of operation",
+                        "name": "hours_of_operation",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Owner ID",
+                        "name": "owner_id",
                         "in": "query"
                     }
                 ],
@@ -462,6 +469,11 @@
         },
         "/business/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get Business by ID",
                 "consumes": [
                     "application/json"
@@ -503,7 +515,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Update Business",
+                "description": "Update an existing business entry",
                 "consumes": [
                     "application/json"
                 ],
@@ -523,12 +535,12 @@
                         "required": true
                     },
                     {
-                        "description": "Update",
+                        "description": "Update Business",
                         "name": "Update",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/genprotos.UpdateBusinessRequest"
+                            "$ref": "#/definitions/genprotos.UpdateBusiness"
                         }
                     }
                 ],
@@ -536,7 +548,7 @@
                     "200": {
                         "description": "Success",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/genprotos.UpdateBusinessResponse"
                         }
                     },
                     "400": {
@@ -596,7 +608,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Get a paginated list of locations",
+                "description": "Get a paginated list of locations. If 'page' is not provided, it defaults to 1.",
                 "consumes": [
                     "application/json"
                 ],
@@ -610,10 +622,10 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "default": 1,
                         "description": "Page number",
                         "name": "page",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -784,7 +796,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/genprotos.CreateReviewRequest"
+                            "$ref": "#/definitions/genprotos.CreateReview"
                         }
                     }
                 ],
@@ -845,7 +857,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Retrieve all reviews for a specific business",
+                "description": "Retrieve all reviews for a specific business. If 'page' is not provided, it defaults to 1.",
                 "consumes": [
                     "application/json"
                 ],
@@ -863,6 +875,13 @@
                         "name": "business_id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -906,7 +925,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/genprotos.UpdateReviewRequest"
+                            "$ref": "#/definitions/genprotos.CreateReview"
                         }
                     }
                 ],
@@ -977,32 +996,15 @@
                 }
             }
         },
-        "genprotos.CreateBookmarkedBusRequest": {
+        "genprotos.CreateBookmarked": {
             "type": "object",
             "properties": {
                 "business_id": {
                     "type": "string"
-                },
-                "user_id": {
-                    "type": "string"
                 }
             }
         },
-        "genprotos.CreateBusinessPhotosRequest": {
-            "type": "object",
-            "properties": {
-                "business_id": {
-                    "type": "string"
-                },
-                "owner_id": {
-                    "type": "string"
-                },
-                "photo_url": {
-                    "type": "string"
-                }
-            }
-        },
-        "genprotos.CreateBusinessRequest": {
+        "genprotos.CreateBusiness": {
             "type": "object",
             "properties": {
                 "category": {
@@ -1022,11 +1024,11 @@
                 },
                 "name": {
                     "type": "string"
-                },
-                "owner_id": {
-                    "type": "string"
                 }
             }
+        },
+        "genprotos.CreateBusinessResponse": {
+            "type": "object"
         },
         "genprotos.CreateLocationRequest": {
             "type": "object",
@@ -1050,7 +1052,18 @@
                 }
             }
         },
-        "genprotos.CreateReviewRequest": {
+        "genprotos.CreatePhotos": {
+            "type": "object",
+            "properties": {
+                "business_id": {
+                    "type": "string"
+                },
+                "photo_url": {
+                    "type": "string"
+                }
+            }
+        },
+        "genprotos.CreateReview": {
             "type": "object",
             "properties": {
                 "business_id": {
@@ -1061,22 +1074,19 @@
                 },
                 "text": {
                     "type": "string"
-                },
-                "user_id": {
-                    "type": "string"
                 }
             }
         },
         "genprotos.CreateReviewResponse": {
             "type": "object"
         },
-        "genprotos.GetAllBookmarkedBusResponse": {
+        "genprotos.GetAllBookmarkedBusinessResponse": {
             "type": "object",
             "properties": {
                 "businesses": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/genprotos.GetBookmarkedBusByIdResponse"
+                        "$ref": "#/definitions/genprotos.GetBookmarkedBusinessByIdResponse"
                     }
                 }
             }
@@ -1103,7 +1113,7 @@
                 }
             }
         },
-        "genprotos.GetBookmarkedBusByIdResponse": {
+        "genprotos.GetBookmarkedBusinessByIdResponse": {
             "type": "object",
             "properties": {
                 "business_id": {
@@ -1134,17 +1144,6 @@
                 }
             }
         },
-        "genprotos.GetBusinessPhotosByOwnerResponse": {
-            "type": "object",
-            "properties": {
-                "photos": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/genprotos.GetBusinessIdResponse"
-                    }
-                }
-            }
-        },
         "genprotos.GetByIdBusinessResponse": {
             "type": "object",
             "properties": {
@@ -1165,6 +1164,9 @@
                 },
                 "id": {
                     "type": "string"
+                },
+                "location": {
+                    "$ref": "#/definitions/genprotos.Location"
                 },
                 "location_id": {
                     "type": "string"
@@ -1216,21 +1218,24 @@
                 }
             }
         },
-        "genprotos.UpdateBusinessPhotosRequest": {
+        "genprotos.Location": {
             "type": "object",
             "properties": {
-                "business_id": {
+                "address": {
                     "type": "string"
                 },
-                "owner_id": {
+                "id": {
                     "type": "string"
                 },
-                "photo_url": {
-                    "type": "string"
+                "latitude": {
+                    "type": "number"
+                },
+                "longitude": {
+                    "type": "number"
                 }
             }
         },
-        "genprotos.UpdateBusinessRequest": {
+        "genprotos.UpdateBusiness": {
             "type": "object",
             "properties": {
                 "category": {
@@ -1245,7 +1250,27 @@
                 "hours_of_operation": {
                     "type": "string"
                 },
-                "id": {
+                "location_id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "genprotos.UpdateBusinessResponse": {
+            "type": "object",
+            "properties": {
+                "category": {
+                    "type": "string"
+                },
+                "contact_info": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "hours_of_operation": {
                     "type": "string"
                 },
                 "location_id": {
@@ -1255,6 +1280,17 @@
                     "type": "string"
                 },
                 "owner_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "genprotos.UpdatePhotos": {
+            "type": "object",
+            "properties": {
+                "business_id": {
+                    "type": "string"
+                },
+                "photo_url": {
                     "type": "string"
                 }
             }
